# paris-hackathon-consultation

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/: home.py  utils.py
app/pages/: dashboard.py  themes.py
example_data/inputs/: detailed_synthetic_data.json  synthetic_data_nuclear_plant.json
example_data/outputs/: detailed_synthetic_data_mapped.json  mappings_nuclear_plant.json  synthetic_data_nuclear_plant_mapped.json
notebooks/: albert_example.ipynb  themefinder_example.ipynb
